add appAgentId validation for CTAction
